Correção matrix. Conversão para docx via word.

--- a/Articles/VECM/Conclusion.org
+++ b/Articles/VECM/Conclusion.org
@@ -4,12 +4,12 @@ In this article, we present a parsimonious specification for residential investm
 Considering this index, we estimate a bi-variate VEC model for the US economy from 1992 to 2019.
 We base the sample and lag order selection both on econometric and economic criterias.
 Our results are:
-	(i) Houses own-rate of interest ($own$) and residential investment growth rate ($g_{I_h}$) share a common long-run trend;
+	(i) houses own-rate of interest ($own$) and residential investment growth rate ($g_{I_h}$) share a common long-run trend;
 	(ii) $g_{I_h}$ effects over $own$ are negligible and; 
 	(iii) houses own-rate of interest has a negative effect on $g_{I_h}$ and it is its main determinant.
-Our estimations does not show residuals serial autocorrelation and heteroscedasticity.
+Our estimations does not show residuals serial autocorrelation nor heteroscedasticity.
 Additionally, the results are not sensible to lag order specification and most expected results remain valid in a economically relevant time horizon.
 
-This paper is just a step towards an broad and emerging heterodox macroeconomic housing agenda.
+This paper is just a step towards an broad and emerging macroeconomic housing agenda.
 A better comprehension of the connection between housing financial system and mortgage market institutional particularities could enlighten this discussion.
 Further studies could also evaluate whether or not houses own-rate of interest validity is restricted to the US.
