--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -894,7 +894,7 @@ Specifically, we argue however small its share on GDP is, it does have a fundame
 
 Usually, economists did not pay a systematic attention to the role of residential investment to macroeconomic dynamics.
 One possible explanation for this could be the small share of residential investment on aggregate demand (see Figure ref:fig:share).
-Recently, this lack of attention has been replaced by a better understanding of the macroeconomic relevance of residential investment.
+Recently, this lack of attention has been replaced by a better understanding of its macroeconomic relevance.
 In this Section, we will present some stylized facts regarding the relevance of residential investment for the US economy.
 
 There are, nevertheless, two notable exceptions.
@@ -915,7 +915,7 @@ In this sense, he proposes a model dedicated for the latter type of investment, 
 \end{figure}
 #+end_export
 
-After a long time, the interest in residential investment has been restored in the business cycles agenda.
+After a long time, the interest in residential investment has been limited to the business cycles agenda.
 textcite:green_follow_1997 analyzed the connection between residential investment and business cycle even before the Great Recession.
 Based on Granger causality tests for the US from 1952 to 1992, he concludes that residential investment leads the business cycle, while non-residential investment lags it.
 textcite:green_follow_1997 relates this result to a forward-looking behavior of households.
@@ -923,7 +923,6 @@ Thus, he restricts the relevance of residential investment as a temporal precede
 
 textcite:leamer_housing_2007 is more incisive and states that housing is the business cycle.
 In analyzing the US economy for the post-war period, he concludes that residential investment is the best predictor of economic crises.
-The economic cycle of US economy would be a consumer cycle: "first homes, then cars, last business investment" \cite[p.~8]{leamer_housing_2007}.
 In a follow up work, the author declares that nine out of eleven US post-war economic recessions were preceded by a severe downturn of residential investment cite:leamer_housing_2015.
 # Thus, according to textcite:leamer_housing_2007, residential investment anticipates and causes the business cycle[fn::However, textcite:leamer_housing_2007 him self did not evaluate this statements econometrically.].
 textcite:kydland_2016_housing expand \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} proposition to other countries to evaluate how unique the US case is.
@@ -936,7 +935,7 @@ For the US both statements are valid and housing related variables (house prices
 
 In order to depict the relation between residential investment and business cycle, we present Figure ref:fig:cycle.
 In each panel, we present the growth rate of selected expenditures two years before and two years after recession starts.
-In most of them, residential investment growth rate is negative before the recession start.
+In most of them, residential investment growth rate is negative before a recession starts.
 The Great Recession is a remarkable example of this pattern while dot-com crisis (2000-1) is an exception as already pointed out by textcite:leamer_housing_2007.
 
 
@@ -975,7 +974,7 @@ Similar to textcite:girardi_long-run_2016, they do not report any relevant feedb
 
 Before we move forward, it is worth mentioning that the relevance of housing is not restricted to its implications to growth and business cycles.
 For example, textcite:jorda_great_2016 report that credit and financial sector growth has been led mainly by mortgages. 
-As a consequence, banking activities were redirected towards granting credit majorly to households and not towards non-residential investment cites:erturk_banks_2007,kohl_more_2018.
+textcite:kohl_more_2018 presents a historical perspective in which banking activities were majorly redirected to households and housing.
 Other studies have shown that house price inflation is the main determinant of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability cites:ryoo_household_2015,stockhammer_debt-driven_2016,barnes_private_2016,johnston_global_2017,mian_household_2017,anderson_politics_2020,fuller_housing_2020.
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
 On the following section, we analyze how econometric literature has dealt with its determinants.
