--- a/Articles/VECM/tabs/EmpiricalMotivation.tex
+++ b/Articles/VECM/tabs/EmpiricalMotivation.tex
@@ -1,6 +1,6 @@
 % \begin{landscape}
 \begin{table}[H]
-    \caption{Residential investment determinants in macroeconometric models}
+    \caption{Residential investment determinants in econometric models}
     \label{tab:summary_models}
     \begin{threeparttable}
         % \resizebox{\textheight}{!}{%
