--- a/Articles/VECM/VECM.org
+++ b/Articles/VECM/VECM.org
@@ -4065,7 +4065,7 @@ However, they report statistically insignificant coefficients for mortgages nomi
 ** Houses own-rate of interest and residential investment growth rate in the US Economy
 #+LATEX: \label{sec:own}
 
-From the previous section, we conclude that house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy) may be the only consensus about residential investment determinants.
+From the previous section, we conclude that house prices (nominal or deflated by some general price index) and some rate of interest (mortgage or long term, as proxy) may be the only consensus about residential investment determinants.
 In this section, we present a particular and parsimonious way of combining those two variables  in a single index that we will use on our econometric estimation.
 
 
@@ -4109,7 +4109,7 @@ In this sense, our work aims at empirically evaluating the relation between hous
 #+LATEX: \label{sec:estimation}
 
 In this subsection we present the estimation estrategy and the data used to assess whether house own-rate of interest explains the behavior of residential investment rate of growth.
-Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes due to the Savings and Loans crisis of the 1980s (see Table ref:structbreak in appendix ref:appen:A for structural break tests)[fn::In addition to the institucional changes mentioned in footnote @@latex: \footref{nota_instituicoes}@@, the Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act (FDICIA) in 1991 were important in increasing the credit volume to households. As a consequence, house finance has increased considerably in the following periods cite:wall_too_2010.].
+Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes due to the Savings and Loans crisis of the 1980s (see Table ref:structbreak in appendix ref:appen:A for structural break tests)[fn::In addition to the institucional changes mentioned in footnote @@latex: \ref{nota_instituicoes}@@, the Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act (FDICIA) in 1991 were important in increasing the credit volume to households in the following periods cite:wall_too_2010.].
 We rely on the following  quarterly seasonally adjusted data[fn::All the date is from FRED database. The codes are MORTGAGE30US, PRFI, and CSUSHPISA respectively. We resampled all the non-quarterly data series by end of the quarter and define growth rate as percent change from the previous quarter.]: (i) 30-year fixed mortgage interest rate, private residential investment and Case-Shiller home price index.
 # Additionally, we consider mortgage interest rate as an exogenous variable in all tests and estimations.
 
@@ -4126,7 +4126,7 @@ In order to do so, we assume the following long-run relationship:
 g_{I_{h_{t}}} = \phi_{0} + \phi_{1}\cdot own_{t}
 \end{equation}
 #+END_latex
-where $\phi_0$ includes factors that we may consider as given (/e.g./ demographic factors, housing and credit policies, among other factors) while $\phi_1$ captures the price-interest rate sensibility of demand for new houses.
+where $\phi_0$ includes factors that we may consider as given already discussed in Subsection ref:sec:own while $\phi_1$ captures the price-interest rate sensibility of demand for new houses.
 Next, we specify the short-run adjustment process of Equation ref:gihLR as follows:
 
 #+begin_export latex
@@ -4135,19 +4135,18 @@ Next, we specify the short-run adjustment process of Equation ref:gihLR as follo
 \begin{bmatrix}
 \Delta own_{t}\\
 \Delta g_{I_{h_{t}}}
-\end{bmatrix} = \begin{bmatrix}\delta_{1}\\ \delta_{2}\end{bmatrix} + \begin{bmatrix}\alpha_{1}\\ \alpha_{2}\end{bmatrix} \begin{bmatrix}g_{I_{h_{t-1}}} - \phi_{0} - \phi_{1,2}\cdot own_{t-1}\\g_{I_{h_{t-1}}} - \phi_{0} - \phi_{1,1}\cdot own_{t-1}\end{bmatrix}^{\prime} + \sum^N_{i=1} \begin{bmatrix}\beta_{1,i} & \gamma_{1,i} \\\beta_{2,i} & \gamma_{2,i} \end{bmatrix} \begin{bmatrix}\Delta g_{I_{h_{t-i}}} \\\Delta own_{t-i}\end{bmatrix} + \varepsilon_{t}
+\end{bmatrix} = \begin{bmatrix}\delta_{1}\\ \delta_{2}\end{bmatrix} + \begin{bmatrix}\alpha_{1}\\ \alpha_{2}\end{bmatrix} \begin{bmatrix}g_{I_{h_{t-1}}} - \phi_{0} - \phi_{1,1}\cdot own_{t-1}\\g_{I_{h_{t-1}}} - \phi_{0} - \phi_{1,2}\cdot own_{t-1}\end{bmatrix}^{\prime} + \sum^N_{i=1} \begin{bmatrix}\beta_{1,i} & \gamma_{1,i} \\\beta_{2,i} & \gamma_{2,i} \end{bmatrix} \begin{bmatrix}\Delta g_{I_{h_{t-i}}} \\\Delta own_{t-i}\end{bmatrix} + \varepsilon_{t}
 \end{equation}
 #+end_export
 where $\delta$ indicate linear trend (level);
 $\alpha$ are adjustment parameters;
 $\beta$ and $\gamma$ are coefficients associated with lagged $g_{I_h}$ and $own$ respectively and; $\varepsilon$ are the residuals.
 
-
 Considering the simple functional form of Equation ref:gihLR and the adjustment process of Equation ref:matrix we present the expected results in Table ref:resultados_esperados.
 Once we report a cointegration relation between houses own-rate of interest and residential investment rate of growth, we expect that the residuals are stationary (hypothesis 1).
 We also expect that residential investment growth rate has a positive long-run trend not related to price effects (hypothesis 5) while houses own-rate of interest has a negative effect as discussed before (hypothesis 4).
 If  hypotheses 1, 4 and 5 are valid, houses own-rate of interest and residential investment rate of growth share a common long-run trend.
-As discussed in subsection ref:sec:own, lagged houses own-rate of interest coefficients in residential investment equation ($\gamma_{2,2}$) should be negative and statistically significant (hypothesis 6).
+As discussed in subsection ref:sec:own, lagged houses own-rate of interest coefficients in residential investment equation ($\gamma_{2}$) should be negative and statistically significant (hypothesis 6).
 
 
 \input{./tabs/hypothesis.tex}
@@ -4159,21 +4158,21 @@ We expect that residential investment rate of growth does not affect  houses own
 The explanation is that house prices and mortgage rate of interest are defined to the whole housing market.
 In this market the newly constructed houses are only a small share of total stock.
 In this sense, we expect supply and demand on the stock of housing to affect its price and, as consequence,  the decisions to acquire and produce new houses.
-But we do predict the reverse causality (hypothesis 7).
+But we do not expected the reverse effect (hypothesis 7).
 In econometric terms, we expect that $own$ is weakly exogenous compared to $g_{I_{h}}$.
 
 For the purpose of determining the order of the model, we use four infomation criteria.
 One (BIC) indicates no lag, the other three (AIC, FPE and HQIC) indicate four lags (see Table ref:criterios in appendix ref:appen:A).
 # Despite its parsimony, we argue that the first lag has no empirical support.
 
-In addition to the information criteria, we also have economic arguments in favor of usings lags.
-What is relevant for someone acquiring a new house with intent to sale with profit is its future price in relation to the buying price, i.e., the future, instead of current, rate of inflation.
+In addition to the information criteria, there are economic arguments in favor of using lags.
+What is relevant for someone acquiring a new house with intent to sale with capital gain is its future price in relation to the buying price, i.e., the future, instead of current, rate of inflation.
 Nevertheless, data series of expected house inflation do not exist and, as consequence, it is not possible to build a series of expected house own-rate of interest.
-So, in the absence of this series, lags of this variable are used as a proxy for the expected one.
+So, in the absence of this series, we use the lags of this variable as a proxy for the expected one.
 This procedure is similar to textcite:keynes_general_1937  "practical theory of the future" in which decision-making process for buying a new asset (in this case, houses) depends on expectations/conventions based on past observations.
 In this scenario, only persistent changes in house own-rate of interest will influence residential investment rate of growth.
 
-Moreover, the construction of new houses takes time. According to the US Survey of Construction cite:SoC_2020, the average construction time (from approval to completion from 1999 to 2019) for a family unity for sale is approximately seven months[fn::Besides our estimation starts in 1992, we use 1999 in this case due to data availability.].
+Moreover, the construction of new houses takes time. According to the US Survey of Construction cite:SoC_2020, the average construction time (from approval to completion between 1999 and 2019) for a family unity for sale is approximately seven months[fn::Besides our estimation starts in 1992, we use 1999 in this case due to data availability.].
 Both houses construction time by contract or by the owner, on the other side, takes approximately 8-12 months to conclude.
 This provides more objective evidence for the relevance to residential investment of persistent change in own-rate of interest and for the use of lags in our model – more specifically, four lags.
 
@@ -4190,21 +4189,21 @@ According to parameters presented in Table ref:Estimacao, we find statistically 
 Therefore, both variables share a long-run trend (validating hypotheses 1 and 4).
 The short-term relationship between $own$ and $g_{Ih}$ ($\beta_{1, is}$ coefficients) are not statistically significant at 5%.
 In addition, coefficients $\gamma_{2,s}$ are negative and statistically significant at 5%, supporting hypothesis 6.
-We also find statistically significant coefficients related to demand for houses for non-speculative reasons ($\phi_0$), validating proposition 5.
-On the other hand, the error correction parameter is statistically significant only for the residential investment growth rate equation.
+We also find statistically significant coefficients related to demand for houses not related to price effects ($\phi_0$), validating proposition 5.
+On the other hand, the error correction parameter ($\alpha$) is statistically significant only for the residential investment growth rate equation.
 In this sense, $own$ is weakly exogenous compared to $g_{I_h}$ while houses own-rate of interest Granger-causes $g_{I_h}$, supporting the hypothesis (2) and (3).
 Since the forth lag of houses own-rate of interest is the only statiscally significantly one at 5% level, we also support hypothesis 7.
 In conclusion, our estimation results are in line with the expected ones and can be summarized as follows: houses own-rate of interest determines --- but is not determined by --- residential investment growth rate and these variables present a long-term relationship.
 
-#+begin_export latex :exports none
-\begin{figure}
+#+begin_export latex
+\begin{table}[H]
+	\caption{Estimation parameters}
 	\centering
-	\caption{Inspection of estimation residuals}
-	\label{residuos}
-	\includegraphics[width=.9\textwidth]{./figs/Residuals_4VECM.png}
+	\input{./tabs/parameters.tex}
 	\caption*{\textbf{Source:} Authors' elaboration}
-\end{figure}
+\end{table}
 #+end_export
+
 
 Next, we analyze the orthogonilized impulse response function (OIRF, see Figure ref:irf).
 In order to do so, we employ the Cholesky decomposition procedure by assuming that houses own-rate of interest is more "exogenous" than residential investment growth rate.
