Versão anônima e estrutura macroeconomia imobiliária

--- a/Reunioes.org
+++ b/Reunioes.org
@@ -157,3 +157,58 @@ Como é o caso de que $\pi = 1$.
 **** Citar paper SFC
 **** Reduzir notas de rodapé
 **** Remover figura 5
+
+** MKKS
+
+*** <2021-04-05 seg> Primeira reunião
+
+**** Questões
+
+- Como trabalhar conjuntamente com o github?
+- Onde posso me basear?
+- O que posso acrescentar?
+
+**** Leituras
+
+- Tese Minsky
+
+**** Próximos passos
+
+- Separar crédito de capital de giro e para investimento
+- Reavaliar investimento de reposição
+- Ler tese Minsky
+- Adicionar flag para retornar ao modelo base
+- Criar Branch
+
+* Capítulos de livros
+
+** Macroeconomia imobiliária
+
+*** Estrutura <2021-04-06 ter>
+
+**** Introdução
+
+- Problematizar a partir do modelo keynesiano simples
+  + Investimento autônomo e consumo induzido
+  + Investimento residencial como uma variável negligenciada $\Rightarrow$ lado real
+    - Ciclo e tendência do ponto de vista empírico apesar do investimento residencial ser pequeno
+    - Distribuição de riqueza, colateral para financiar consumo e bolha $\Rightarrow$ instabilidade financeira
+
+**** Lado das finanças
+
+- Investimento residencial só pode liderar economia por conta da dimensão real
+- Lado real só é relevante por conta dos efeitos do lado real
+
+***** Contrapor financeirização e hipotecarização
+
+***** Bolhas e pouco explorado bolha de imóveis com fragilidade financeira e crise
+
+**** Lado real
+
+**** Agendas
+
+***** Determinantes do investimento residencial (bolha)
+
+***** Especificidades institucional do mercado de crédito imobiliário $\Rightarrow$ bolhas alavancadas a partir do investimento residencial
+
+***** Instabilidade financeira e heterogeneidade
