--- a/Articles/VECM/Petrini_VECM_2021.org
+++ b/Articles/VECM/Petrini_VECM_2021.org
@@ -50,12 +50,13 @@
 
 ** Authors infos :ignore:
 #+LATEX_HEADER: \usepackage{authblk}
-#+LATEX_HEADER:\author[1]{Gabriel Petrini}
-#+LATEX_HEADER:\affil[1]{PhD Student at University of Campinas (Brazil), Email: \url{gpetrinidasilveira@gmail.com}} % Author affiliation
-#+LATEX_HEADER:\author[2]{Lucas Teixeira}
-#+LATEX_HEADER:\affil[2]{Assistant Professor at University of Campinas (Brazil), Email: \url{lucastei@unicamp.br}} % Author affiliation
-# #+LATEX_HEADER:\author[3]{Frankin Serrano}
-# #+LATEX_HEADER:\affil[3]{Associate Professor at Federal University of Rio de Janeiro (Brazil), Email: \url{}} % Author affiliation
+#+LATEX_HEADER:\author{}
+# #+LATEX_HEADER:\author[1]{Gabriel Petrini}
+# #+LATEX_HEADER:\affil[1]{PhD Student at University of Campinas (Brazil), Email: \url{gpetrinidasilveira@gmail.com}} % Author affiliation
+# #+LATEX_HEADER:\author[2]{Lucas Teixeira}
+# #+LATEX_HEADER:\affil[2]{Assistant Professor at University of Campinas (Brazil), Email: \url{lucastei@unicamp.br}} % Author affiliation
+# # #+LATEX_HEADER:\author[3]{Frankin Serrano}
+# # #+LATEX_HEADER:\affil[3]{Associate Professor at Federal University of Rio de Janeiro (Brazil), Email: \url{}} % Author affiliation
 
 #+PROPERTY: header-args:python :python /usr/bin/python3 :exports none :eval never-export
 #+BIND: org-latex-prefer-user-labels t
